--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "test": "jest",
     "clean:eslint": "eslint",
-    "clean:prettier": "prettier ./src -c"
+    "clean:prettier": "prettier ./src -c",
+    "generate:documentation": "typedoc"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
@@ -18,6 +19,7 @@
     "jest": "^29.7.0",
     "prettier": "^3.5.1",
     "ts-jest": "^29.2.5",
+    "typedoc": "^0.27.8",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.0"
   },
@@ -27,5 +29,7 @@
     "singleQuote": true,
     "bracketSpacing": true
   },
-  "files": ["/dist"]
+  "files": [
+    "/dist"
+  ]
 }
